# clips

./: .prettierignore  README.md  package.json  shell.nix  tsconfig.json  vite.config.js
.github/workflows/: tauri.yml
nixos/: README.md
nixos/clips/: default.nix
nixos/yt-dlp/: default.nix  release.nix
src/: app.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/lib/: transcript.ts
src/lib/components/: AddClipModal.svelte  DownloadProgressModal.svelte  HistoryModal.svelte  PortionPopover.svelte  SettingsModal.svelte  VideoPlayer.svelte  frontend-fetch-transcript.ts
src/lib/components/ui/popover/: popover-content.svelte
src/lib/functions/: index.ts  sys-instructions.ts  time.ts  transcript.ts  youtube.ts
src/routes/: +page.svelte
